Bug 1495446 - Fix timestamp of WebRTC RTCP stats. r=jib, a=RyanVM

The RTCP timestamps have different timebases and reporting sources, this makes the source and timebase the same for all RTCP stats

Differential Revision: https://phabricator.services.mozilla.com/D7354

--HG--
extra : source : 836f752852c5c94caf33d5c4d7e9958c43e700f5